Fixed a bug a bug where Plugin Store screenshots were not showing properly. Fixes #3709

--- a/src/web/assets/pluginstore/src/sass/general.scss
+++ b/src/web/assets/pluginstore/src/sass/general.scss
@@ -22,6 +22,10 @@ p {
   @apply .mb-4;
 }
 
+.swiper-wrapper {
+  min-width: auto;
+}
+
 .ps-header {
   @apply .border-b .border-solid .border-grey-light .py-2 .flex .justify-between;
 }
